US17923: Fixing the width to align with the drop down
Former-commit-id: 719d3756f25f7560df48218a08426bb20fcfceb8

--- a/assets/less/widget.less
+++ b/assets/less/widget.less
@@ -1481,7 +1481,7 @@ background-image: -moz-linear-gradient(top,@color-white,@color-white);
             }
 
             button.dropdown-toggle {
-                width: 225px;
+                width: 250px;
                 height: 28px;
                 text-align: left;
                 font-size: 14px;
